--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -72,20 +72,20 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://e7.pngegg.com/pngimages/335/640/png-clipart-question-mark-question-mark.png" class="card-img-top" alt="...">
+        <img src="https://i.ytimg.com/vi/pPQh57keVQg/maxresdefault.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">???</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Mineirinho Ultra Adventure</h5>
+          <p class="card-text">Esta é a primeira, rara e clássica versão do nosso amigo Mineirinho, muitas aventuras no mundo 3D com um toque de nostalgia e uma aventura gloriosa.</p>
           <a href="#" class="btn btn-primary">???</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://e7.pngegg.com/pngimages/335/640/png-clipart-question-mark-question-mark.png" class="card-img-top" class="card-img-top" alt="...">
+        <img src="https://img.hype.games/cdn/4b3bc930-fca6-4cef-a306-63e85bcdcc28Cover-Blasphemous.jpg" class="card-img-top" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">???</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Blasphemous</h5>
+          <p class="card-text">Um mundo condenado, uma fé distorcida e um penitente em busca de redenção. Sacrifício e sofrimento o guiarão, você suportará essa culpa?</p>
           <a href="#" class="btn btn-primary">???</a>
         </div>
       </div>
