ele zerou todossss os jogos

--- a/projeto_2/src/app/_components/mago/mago.component.html
+++ b/projeto_2/src/app/_components/mago/mago.component.html
@@ -1,5 +1,15 @@
-<div class="container text-center">
-    <h2>Mago</h2>
-    <p>O mago é um mestre da magia, controlando elementos e invocando feitiços poderosos.</p>
+<div class="container d-flex align-items-center justify-content-center my-4">
+  <img src="https://img.freepik.com/premium-photo/pixel-art-wizard-holding-flaming-staff-isolated-white-background_885831-37652.jpg" 
+       alt="Mago Davy Jones" 
+       class="img-fluid rounded me-3" 
+       style="max-width: 200px;">
+  <div>
+    <h2 class="fw-bold">Davy Jones</h2>
+    <p class="text-muted">Ele não é apenas um mestre dos jogos, ele zerou <strong>todos</strong>. Domina <strong>todos</strong> os desafios e segredos, sem jamais precisar de ajuda. Seu poder é tal que, ao iniciar qualquer jogo, a tela brilhou e a voz ecoava:
+      "Eu sou Davy Jones, seu guia."</p>
   </div>
-  
+</div>
+
+<div class="text-center my-3">
+  <a href="https://youtu.be/Wr9Br0QmBP0?si=2gxvGFMNwOGSx2Gw" target="_blank" class="btn btn-primary">Suas magias</a>
+</div>
