deu certo mas ta dando errado, renan me ajuda

--- a/projeto_2/src/app/app.component.html
+++ b/projeto_2/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-cabecalho></app-cabecalho>
   <app-cartao></app-cartao>
   <app-rodape></app-rodape>
+  <router-outlet></router-outlet>
 </app-corpo-site>
