--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -6,7 +6,7 @@
         <div class="card-body">
           <h5 class="card-title">Clash Royale</h5>
           <p class="card-text">Duelos rápidos, estratégia afiada e reviravoltas épicas!! Cada carta pode mudar tudo. Você está pronto para a batalha?</p>
-          <a href="#" class="btn btn-primary">Gaste elixir na arena</a>
+          <a [routerLink]="['/clash']" class="btn btn-primary">Gaste elixir na arena</a>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
         <div class="card-body">
           <h5 class="card-title">Cyberpunk 2077</h5>
           <p class="card-text">Um futuro caótico, uma cidade sem leis e um mercenário em busca da imortalidade. Até onde você iria para se tornar uma lenda?</p>
-          <a href="#" class="btn btn-primary">Conecte-se a Night City</a>
+          <a [routerLink]="['/cyberpunk']" class="btn btn-primary">Conecte-se a Night City</a>
         </div>
       </div>
     </div>
@@ -26,7 +26,7 @@
         <div class="card-body">
           <h5 class="card-title">Dark Souls 3</h5>
           <p class="card-text">Cinzas e escuridão dominam um mundo à beira do fim. Você se erguerá para desafiar deuses e monstros ou sucumbirá às chamas?</p>
-          <a href="#" class="btn btn-primary">Busque as almas</a>
+          <a [routerLink]="['/dark-souls']" class="btn btn-primary">Busque as almas</a>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
         <div class="card-body">
           <h5 class="card-title">Red Dead Redemption 2</h5>
           <p class="card-text">O Velho Oeste está morrendo, e com ele, os foras da lei. Em um mundo que não perdoa, você lutará para sobreviver ou será esquecido?</p>
-          <a href="#" class="btn btn-primary">Entre aos Van der Linde</a>
+          <a [routerLink]="['/red-dead']" class="btn btn-primary">Entre aos Van der Linde</a>
         </div>
       </div>
     </div>
@@ -44,9 +44,9 @@
       <div class="card custom-card">
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">JoJo's Bizzare Adventure: Heritage for the Future</h5>
+          <h5 class="card-title">JoJo's Bizarre Adventure: Heritage for the Future</h5>
           <p class="card-text">Stand contra Stand!! O tempo está passando, você tem o que é preciso para mudar o "Mundo"?</p>
-          <a href="#" class="btn btn-primary">Derrote Dio Brando</a>
+          <a [routerLink]="['/jojo']" class="btn btn-primary">Derrote Dio Brando</a>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h5 class="card-title">Chrono Trigger</h5>
           <p class="card-text">Eras se entrelaçam! Viaje pelo tempo e enfrente ameaças que transcendem a história. Você conseguirá mudar o futuro?</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <a [routerLink]="['/chrono-trigger']" class="btn btn-primary">Atravesse o tempo</a>
         </div>
       </div>
     </div>
@@ -65,8 +65,8 @@
         <img src="https://www.pichauarena.com.br/wp-content/uploads/2022/01/csgotr.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Counter-Strike: Global Offensive</h5>
-          <p class="card-text">Terroristas vs. Contra-Terroristas. Uma tensão incessante que com um único objetivo, espalhar o caos (ou impedir a mesma). Está preparado? </p>
-          <a href="#" class="btn btn-primary">Desarme (ou arme)</a>
+          <p class="card-text">Terroristas vs. Contra-Terroristas. Uma tensão incessante que com um único objetivo, espalhar o caos (ou impedir a mesma). Está preparado?</p>
+          <a [routerLink]="['/csgo']" class="btn btn-primary">Desarme (ou arme)</a>
         </div>
       </div>
     </div>
@@ -76,17 +76,17 @@
         <div class="card-body">
           <h5 class="card-title">Mineirinho Ultra Adventure</h5>
           <p class="card-text">Esta é a primeira, rara e clássica versão do nosso amigo Mineirinho, muitas aventuras no mundo 3D com um toque de nostalgia e uma aventura gloriosa.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <a [routerLink]="['/mineirinho']" class="btn btn-primary">Voe alto</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://img.hype.games/cdn/4b3bc930-fca6-4cef-a306-63e85bcdcc28Cover-Blasphemous.jpg" class="card-img-top" class="card-img-top" alt="...">
+        <img src="https://img.hype.games/cdn/4b3bc930-fca6-4cef-a306-63e85bcdcc28Cover-Blasphemous.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Blasphemous</h5>
           <p class="card-text">Um mundo condenado, uma fé distorcida e um penitente em busca de redenção. Sacrifício e sofrimento o guiarão, você suportará essa culpa?</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <a [routerLink]="['/blasphemous']" class="btn btn-primary">Expie seus pecados</a>
         </div>
       </div>
     </div>
