--- a/projeto_2/src/app/_components/pagina-clash/pagina-clash.component.html
+++ b/projeto_2/src/app/_components/pagina-clash/pagina-clash.component.html
@@ -1,1 +1,9 @@
-<p>pagina-clash works!</p>
+<!-- teste -->
+
+<div class="pagina-clash">
+    <h1>Clash Royale</h1>
+    <p>Duelos rápidos, estratégia afiada e reviravoltas épicas!!</p>
+    <a class="btn-clash" routerLink="/">Voltar</a>
+    <img src="https://t2.tudocdn.net/366920?w=1920" alt="Clash Royale">
+  </div>
+  
