--- a/projeto_2/src/app/app.component.html
+++ b/projeto_2/src/app/app.component.html
@@ -1,6 +1,9 @@
-<app-corpo-site>
-  <app-cabecalho></app-cabecalho>
-  <app-cartao></app-cartao>
-  <app-rodape></app-rodape>
-  <router-outlet></router-outlet>
-</app-corpo-site>
+<ng-container *ngIf="isHomeRoute()">
+  <app-corpo-site>
+    <app-cabecalho></app-cabecalho>
+    <app-cartao></app-cartao>
+    <app-rodape></app-rodape>
+  </app-corpo-site>
+</ng-container>
+
+<router-outlet></router-outlet>
