a foto de blasphemous tava dando erro pq o if bloqueou o acesso do site

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -82,7 +82,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://img.hype.games/cdn/4b3bc930-fca6-4cef-a306-63e85bcdcc28Cover-Blasphemous.jpg" class="card-img-top" alt="...">
+        <img src="https://selecta-play.com/13389/blasphemous-edicion-coleccionista-nintendo-switch.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Blasphemous</h5>
           <p class="card-text">Um mundo condenado, uma fé distorcida e um penitente em busca de redenção. Sacrifício e sofrimento o guiarão, você suportará essa culpa?</p>
