--- a/projeto_2/src/app/_components/pagina-blas/pagina-blas.component.html
+++ b/projeto_2/src/app/_components/pagina-blas/pagina-blas.component.html
@@ -1,1 +1,5 @@
-<p>pagina-blas works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Blasphemous">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
