--- a/projeto_2/src/app/_components/pagina-chrono/pagina-chrono.component.html
+++ b/projeto_2/src/app/_components/pagina-chrono/pagina-chrono.component.html
@@ -1,1 +1,5 @@
-<p>pagina-chrono works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Chrono Trigger">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
