--- a/projeto_2/src/app/_components/pagina-cyber/pagina-cyber.component.html
+++ b/projeto_2/src/app/_components/pagina-cyber/pagina-cyber.component.html
@@ -1,1 +1,5 @@
-<p>pagina-cyber works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Cyberpunk 2077">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
