--- a/projeto_2/src/app/_components/pagina-jojo/pagina-jojo.component.html
+++ b/projeto_2/src/app/_components/pagina-jojo/pagina-jojo.component.html
@@ -1,1 +1,5 @@
-<p>pagina-jojo works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="JoJo's Bizarre Adventure">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
