--- a/projeto_2/src/app/_components/pagina-mineirinho/pagina-mineirinho.component.html
+++ b/projeto_2/src/app/_components/pagina-mineirinho/pagina-mineirinho.component.html
@@ -1,1 +1,5 @@
-<p>pagina-mineirinho works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Mineirinho Ultra Adventuree">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
