--- a/projeto_2/src/app/_components/pagina-red-dead/pagina-red-dead.component.html
+++ b/projeto_2/src/app/_components/pagina-red-dead/pagina-red-dead.component.html
@@ -1,1 +1,5 @@
-<p>pagina-red-dead works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Red Dead Redemption">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
