--- a/projeto_2/src/app/_components/pagina-clash/pagina-clash.component.html
+++ b/projeto_2/src/app/_components/pagina-clash/pagina-clash.component.html
@@ -1,1 +1,5 @@
-<p>pagina-clash works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Clash Royale">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
