--- a/projeto_2/src/app/_components/pagina-cs/pagina-cs.component.html
+++ b/projeto_2/src/app/_components/pagina-cs/pagina-cs.component.html
@@ -1,1 +1,5 @@
-<p>pagina-cs works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Counter-Strike">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
