--- a/projeto_2/src/app/_components/pagina-dark-souls/pagina-dark-souls.component.html
+++ b/projeto_2/src/app/_components/pagina-dark-souls/pagina-dark-souls.component.html
@@ -1,1 +1,5 @@
-<p>pagina-dark-souls works!</p>
+<app-cabeca-jogo></app-cabeca-jogo>
+<app-corpo-jogo titulo="Dark Souls">
+  <p>Informações sobre o jogo...</p>
+</app-corpo-jogo>
+<app-rodape-jogo></app-rodape-jogo>
