--- a/projeto_2/src/app/_components/rodape-jogo/rodape-jogo.component.html
+++ b/projeto_2/src/app/_components/rodape-jogo/rodape-jogo.component.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid text-center bg-dark text-light" data-bs-theme="dark">
+<footer class="container-fluid footer-flex-container text-center bg-dark text-light" data-bs-theme="dark">
     <div class="text-center p-3 border-top border-body">
       <div class="mt-4 text-body">© 2025 IFRN</div>
     </div>
