--- a/projeto_2/src/app/_components/corpo-jogo/corpo-jogo.component.css
+++ b/projeto_2/src/app/_components/corpo-jogo/corpo-jogo.component.css
@@ -6,44 +6,23 @@
   font-family: Arial, sans-serif;
 }
 
-.sidebar {
-  width: 250px;
-  background-color: #282a36;
-  padding: 20px;
-  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.sidebar nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-.sidebar nav ul li {
-  margin: 10px 0;
-}
-
-.sidebar nav ul li a {
-  color: white;
-
-  font-size: 18px;
-  transition: color 0.3s;
-}
-
-.sidebar nav ul li a:hover {
-  color: #ff00ff;
-}
-
 .content {
   padding: 20px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.page-header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .page-header h1 {
   margin-bottom: 20px;
   color: #ff00ff;
-}
-
-.page-content {
-  background-color: #44475a;
-  padding: 20px;
-  border-radius: 8px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
