--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -21,9 +21,22 @@
 
     <nav class="navbar navbar-expand-lg p-0 ml-auto">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+        <!-- Exibe o nome do usuário ou o link de login -->
+        <li class="nav-item" *ngIf="usuarioLogado$ | async as usuario; else loginLink">
+          <span class="nav-link p-0 text-white">Bem-vindo, {{ usuario?.nome }}</span>
         </li>
+
+        <ng-template #loginLink>
+          <li class="nav-item">
+            <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+          </li>
+        </ng-template>
+
+        <!-- Botão de logout quando o usuário está logado -->
+        <li class="nav-item" *ngIf="usuarioLogado$ | async">
+          <button class="nav-link p-0 text-white btn btn-link" (click)="logout()">Sair</button>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#sobreModal">Sobre</a>
         </li>
@@ -32,6 +45,7 @@
   </div>
 </header>
 
+<!-- Modais -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
