--- a/projeto_2/src/app/_components/corpo-site/corpo-site.component.html
+++ b/projeto_2/src/app/_components/corpo-site/corpo-site.component.html
@@ -1,5 +1,6 @@
-<app-cabecalho></app-cabecalho>
-<app-cartao></app-cartao>
-<app-rodape></app-rodape>
-
+<body>
+  <app-cabecalho></app-cabecalho>
+  <app-cartao></app-cartao>
+  <app-rodape></app-rodape>
+</body>
 
