--- a/projeto_2/src/app/_components/cabeca-jogo/cabeca-jogo.component.html
+++ b/projeto_2/src/app/_components/cabeca-jogo/cabeca-jogo.component.html
@@ -3,7 +3,7 @@
       <nav class="navbar navbar-expand-lg p-0">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link p-0 text-white" href="javascript:void(0)">Favoritos</a>
+            <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#favoritosModal">Favoritos</a>
           </li>
         </ul>
       </nav>
@@ -24,4 +24,21 @@
         </ul>
       </nav>
     </div>
-  </header>
+</header>
+
+<div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="favoritosModalLabel">Favoritos</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Aqui você pode adicionar o conteúdo do modal Favoritos.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
