--- a/projeto_2/src/app/_components/favoritos/favoritos.component.html
+++ b/projeto_2/src/app/_components/favoritos/favoritos.component.html
@@ -1,7 +1,13 @@
-<div class="container text-center">
-    <h2>Jogos Favoritados</h2>
-    <p>
-        Aqui você pode adicionar os jogos que mais gosta e acessá-los facilmente a qualquer momento.
-    </p>
+<div *ngIf="favoritos.length > 0; else vazio">
+    <ul>
+      <li *ngFor="let jogo of favoritos" style="cursor: pointer;">
+          {{ jogo }}
+
+      </li>
+    </ul>
   </div>
+  
+  <ng-template #vazio>
+    <p>Nenhum jogo favoritado.</p>
+  </ng-template>
   
