estudando para aplicar api, vou fazer um rascunho e se der bom eu comito

--- a/projeto_2/src/app/_components/cartao/cartao.component.css
+++ b/projeto_2/src/app/_components/cartao/cartao.component.css
@@ -46,13 +46,13 @@
 }
 
 .col {
-  flex: 1 1 30%; /* Mantém aproximadamente 3 colunas */
-  max-width: 30%; /* Garante que os cartões não fiquem enormes */
+  flex: 1 1 30%;
+  max-width: 30%;
 }
 
 @media (max-width: 768px) {
   .col {
-    flex: 1 1 100%; /* Em telas pequenas, cada cartão ocupa a linha inteira */
+    flex: 1 1 100%;
     max-width: 100%;
   }
 }
