--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -19,7 +19,7 @@
         <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="Cyberpunk 2077">
         <div class="card-body">
           <h5 class="card-title">Cyberpunk 2077</h5>
-          <p class="card-text">Um futuro caótico, uma cidade sem leis e um mercenário em busca da imortalidade. Até onde você iria para se tornar uma lenda?</p>
+          <p class="card-text">Um futuro caótico, uma cidade sem leis e uma busca da imortalidade. Até onde você iria para se tornar uma lenda?</p>
           <a [routerLink]="['/cyberpunk']" class="btn btn-primary">Conecte-se a Night City</a>
           <div (click)="toggleFavorito('Cyberpunk 2077')">
             <i [ngClass]="isFavorito('Cyberpunk 2077') ? 'fas fa-heart text-red-500' : 'far fa-heart text-gray-500'"></i>
@@ -58,7 +58,7 @@
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="JoJo's Bizarre Adventure: Heritage for the Future">
         <div class="card-body">
           <h5 class="card-title">JoJo's Bizarre Adventure: Heritage for the Future</h5>
-          <p class="card-text">Stand contra Stand!! O tempo está passando, você tem o que é preciso para mudar o "Mundo"?</p>
+          <p class="card-text">Stand contra Stand!! Você tem o que é preciso para mudar o "Mundo"?</p>
           <a [routerLink]="['/jojo']" class="btn btn-primary">Derrote Dio Brando</a>
           <div (click)="toggleFavorito('JoJo\'s Bizarre Adventure: Heritage for the Future')">
             <i [ngClass]="isFavorito('JoJo\'s Bizarre Adventure: Heritage for the Future') ? 'fas fa-heart text-red-500' : 'far fa-heart text-gray-500'"></i>
