--- a/projeto_2/src/app/_components/pagina-chrono/pagina-chrono.component.html
+++ b/projeto_2/src/app/_components/pagina-chrono/pagina-chrono.component.html
@@ -1,4 +1,3 @@
 <app-cabeca-jogo></app-cabeca-jogo>
-<app-corpo-jogo titulo="Chrono Trigger">
-</app-corpo-jogo>
+<app-corpo-jogo></app-corpo-jogo>
 <app-rodape-jogo></app-rodape-jogo>
