--- a/projeto_2/src/app/_components/pagina-jojo/pagina-jojo.component.html
+++ b/projeto_2/src/app/_components/pagina-jojo/pagina-jojo.component.html
@@ -1,4 +1,4 @@
 <app-cabeca-jogo></app-cabeca-jogo>
-<app-corpo-jogo titulo="JoJo's Bizarre Adventure">
+<app-corpo-jogo>
 </app-corpo-jogo>
 <app-rodape-jogo></app-rodape-jogo>
