--- a/projeto_2/src/app/_components/pagina-blas/pagina-blas.component.html
+++ b/projeto_2/src/app/_components/pagina-blas/pagina-blas.component.html
@@ -1,4 +1,3 @@
 <app-cabeca-jogo></app-cabeca-jogo>
-<app-corpo-jogo titulo="Blasphemous">
-</app-corpo-jogo>
+<app-corpo-jogo></app-corpo-jogo>
 <app-rodape-jogo></app-rodape-jogo>
