--- a/projeto_2/src/app/components/home/favoritos/favoritos.component.html
+++ b/projeto_2/src/app/components/home/favoritos/favoritos.component.html
@@ -1,13 +1,11 @@
 <div *ngIf="favoritos.length > 0; else vazio">
-    <ul>
-      <li *ngFor="let jogo of favoritos" style="cursor: pointer;">
-          {{ jogo }}
+  <ul>
+    <li *ngFor="let jogo of favoritos" (click)="irParaPagina(jogo)" style="cursor: pointer; text-decoration: underline; color: blue;">
+      {{ jogo }}
+    </li>
+  </ul>
+</div>
 
-      </li>
-    </ul>
-  </div>
-  
-  <ng-template #vazio>
-    <p>Nenhum jogo favoritado.</p>
-  </ng-template>
-  
+<ng-template #vazio>
+  <p>Nenhum jogo favoritado.</p>
+</ng-template>
