--- a/projeto_2/src/app/components/subpage/cabeca-jogo/cabeca-jogo.component.html
+++ b/projeto_2/src/app/components/subpage/cabeca-jogo/cabeca-jogo.component.html
@@ -1,46 +1,44 @@
 <header class="header bg-dark">
   <div class="container d-flex justify-content-between align-items-center">
     <nav class="navbar navbar-expand-lg p-0">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-      <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#favoritosModal">Favoritos</a>
-      </li>
-    </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#favoritosModal">Favoritos</a>
+        </li>
+      </ul>
     </nav>
   
     <div class="d-flex justify-content-center align-items-center flex-grow-1">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
-    <div class="text-center">
-      <h1 class="mb-0 text-white">Quest'pedia ✰</h1>
-      <p class="mb-0 text-white">Explore seu jogo favorito</p>
-    </div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
+      <div class="text-center">
+        <h1 class="mb-0 text-white">Quest'pedia ✰</h1>
+        <p class="mb-0 text-white">Explore seu jogo favorito</p>
+      </div>
     </div>
   
     <nav class="navbar navbar-expand-lg p-0 ml-auto">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-      <a class="nav-link p-0 text-white" href="javascript:history.back()">Voltar</a>
-      </li>
-    </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link p-0 text-white" href="javascript:history.back()">Voltar</a>
+        </li>
+      </ul>
     </nav>
   </div>
 </header>
 
 <div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-    <h5 class="modal-title" id="favoritosModalLabel">Favoritos</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="favoritosModalLabel">Favoritos</h5>
+      </div>
+      <div class="modal-body">
+        <ul>
+          <li *ngFor="let jogo of favoritos" (click)="irParaPagina(jogo)" style="cursor: pointer; text-decoration: underline; color: blue;">
+            {{ jogo }}
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="modal-body">
-    <ul>
-      <li *ngFor="let jogo of favoritos">{{ jogo }}</li>
-    </ul>
-    </div>
-    <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-    </div>
-  </div>
   </div>
 </div>
