imagem lentas corrigidas

--- a/projeto_2/src/app/components/home/cartao/cartao.component.html
+++ b/projeto_2/src/app/components/home/cartao/cartao.component.html
@@ -2,7 +2,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
     <div class="col">
       <div class="card custom-card">
-        <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="Clash Royale">
+        <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="Clash Royale" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Clash Royale</h5>
           <p class="card-text">Duelos rápidos, estratégia afiada e reviravoltas épicas!! Cada carta pode mudar tudo. Você está pronto para a batalha?</p>
@@ -16,7 +16,7 @@
     <div class="col">
       <div class="card custom-card"></div>
       <div class="card custom-card">
-        <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="Cyberpunk 2077">
+        <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="Cyberpunk 2077" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Cyberpunk 2077</h5>
           <p class="card-text">Um futuro caótico, uma cidade sem leis e uma busca da imortalidade. Até onde você iria para se tornar uma lenda?</p>
@@ -29,7 +29,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="Dark Souls 3">
+        <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="Dark Souls 3" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Dark Souls 3</h5>
           <p class="card-text">Cinzas e escuridão dominam um mundo à beira do fim. Você se erguerá para desafiar deuses e monstros ou sucumbirá às chamas?</p>
@@ -42,7 +42,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="Red Dead Redemption 2">
+        <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="Red Dead Redemption 2" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Red Dead Redemption 2</h5>
           <p class="card-text">O Velho Oeste está morrendo, e com ele, os foras da lei. Em um mundo que não perdoa, você lutará para sobreviver ou será esquecido?</p>
@@ -55,7 +55,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="JoJo's Bizarre Adventure: Heritage for the Future">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="JoJo's Bizarre Adventure: Heritage for the Future" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">JoJo's Bizarre Adventure: Heritage for the Future</h5>
           <p class="card-text">Stand contra Stand!! Você tem o que é preciso para mudar o "Mundo"?</p>
@@ -68,7 +68,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://funfactor.pt/wp-content/uploads/2018/07/chrono-trigger.jpeg?w=1280&h=720&crop=1" class="card-img-top" alt="Chrono Trigger">
+        <img src="https://funfactor.pt/wp-content/uploads/2018/07/chrono-trigger.jpeg?w=1280&h=720&crop=1" class="card-img-top" alt="Chrono Trigger" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Chrono Trigger</h5>
           <p class="card-text">Eras se entrelaçam! Viaje pelo tempo e enfrente ameaças que transcendem a história. Você conseguirá mudar o futuro?</p>
@@ -81,7 +81,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://www.pichauarena.com.br/wp-content/uploads/2022/01/csgotr.jpg" class="card-img-top" alt="Counter-Strike: Global Offensive">
+        <img src="https://www.pichauarena.com.br/wp-content/uploads/2022/01/csgotr.jpg" class="card-img-top" alt="Counter-Strike: Global Offensive" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Counter-Strike: Global Offensive</h5>
           <p class="card-text">Terroristas vs. Contra-Terroristas. Uma tensão incessante que com um único objetivo, espalhar o caos (ou impedir a mesma). Está preparado?</p>
@@ -94,7 +94,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://i.ytimg.com/vi/pPQh57keVQg/maxresdefault.jpg" class="card-img-top" alt="Mineirinho Ultra Adventure">
+        <img src="https://i.ytimg.com/vi/pPQh57keVQg/maxresdefault.jpg" class="card-img-top" alt="Mineirinho Ultra Adventure" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Mineirinho Ultra Adventure</h5>
           <p class="card-text">Esta é a primeira, rara e clássica versão do nosso amigo Mineirinho, muitas aventuras no mundo 3D com um toque de nostalgia e uma aventura gloriosa.</p>
@@ -107,7 +107,7 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://selecta-play.com/13389/blasphemous-edicion-coleccionista-nintendo-switch.jpg" class="card-img-top" alt="Blasphemous">
+        <img src="https://selecta-play.com/13389/blasphemous-edicion-coleccionista-nintendo-switch.jpg" class="card-img-top" alt="Blasphemous" loading="lazy">
         <div class="card-body">
           <h5 class="card-title">Blasphemous</h5>
           <p class="card-text">Um mundo condenado, uma fé distorcida e um penitente em busca de redenção. Sacrifício e sofrimento o guiarão, você suportará essa culpa?</p>
