--- a/projeto_2/src/app/components/subpage/corpo-jogo/corpo-jogo.component.html
+++ b/projeto_2/src/app/components/subpage/corpo-jogo/corpo-jogo.component.html
@@ -1,6 +1,10 @@
 <div class="wiki-container">
   <main class="content">
-    <header class="page-header">
-    </header>
+    <header class="page-header"></header>
+
+    <div class="tables-container">
+      <div class="game-box"></div>
+      <div class="game-box"></div>
+    </div>
   </main>
 </div>
