--- a/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg p-0 ml-auto">
       <ul class="navbar-nav">
         <li class="nav-item" *ngIf="usuarioLogado$ | async as usuario; else loginLink">
-          <span class="nav-link p-0 text-white">{{ usuario?.nome }}</span>
+          <span class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">{{ usuario?.nome }}</span>
         </li>
 
         <ng-template #loginLink>
@@ -30,10 +30,6 @@
             <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
           </li>
         </ng-template>
-
-        <li class="nav-item" *ngIf="usuarioLogado$ | async">
-          <button class="nav-link p-0 text-white btn btn-link" (click)="logout()">Sair</button>
-        </li>
 
         <li class="nav-item">
           <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#sobreModal">Sobre</a>
@@ -48,9 +44,29 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body">
         <app-formulario></app-formulario>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="logoutModalLabel">Sair</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p class="fw-bold fs-4">Olá, <span *ngIf="usuarioLogado$ | async as usuario">{{ usuario?.nome }}, </span>tem certeza que deseja sair?</p>
+        <p>Sair do Quest'pedia como <span *ngIf="usuarioLogado$ | async as usuario">{{ usuario?.email }}</span>?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" (click)="logout()" data-bs-dismiss="modal">Sair</button>
       </div>
     </div>
   </div>
