--- a/projeto_2/src/app/components/home/formulario/formulario.component.html
+++ b/projeto_2/src/app/components/home/formulario/formulario.component.html
@@ -7,14 +7,14 @@
       <form (ngSubmit)="login()">
 
         <div class="mb-3">
-          <label for="nome" class="form-label">Nome</label>
+          <label for="nome" class="form-label">Usuário</label>
           <input
             type="text"
             class="form-control"
             id="nome"
             [(ngModel)]="nome"
             name="nome"
-            placeholder="Digite seu nome"
+            placeholder="Digite seu usuário"
             autocomplete="name"
             required
           />
