--- a/projeto_2/src/app/components/pages/pagina-cyber/pagina-cyber.component.html
+++ b/projeto_2/src/app/components/pages/pagina-cyber/pagina-cyber.component.html
@@ -1,3 +1,4 @@
 <app-cabeca-jogo></app-cabeca-jogo>
-<app-corpo-jogo></app-corpo-jogo>
+<app-corpo-jogo *ngIf="jogo" [jogo]="jogo"></app-corpo-jogo>
+
 <app-rodape-jogo></app-rodape-jogo>
