--- a/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
@@ -39,6 +39,7 @@
   </div>
 </header>
 
+<!-- Modal Login -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -53,6 +54,7 @@
   </div>
 </div>
 
+<!-- Modal Logout -->
 <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -72,7 +74,8 @@
   </div>
 </div>
 
-<div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true">
+<!-- Modal Favoritos -->
+<div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true" (hidden.bs.modal)="removerBackdrop()">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -85,6 +88,7 @@
   </div>
 </div>
 
+<!-- Modal Mago -->
 <div class="modal fade" id="magoModal" tabindex="-1" aria-labelledby="magoModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -98,6 +102,7 @@
   </div>
 </div>
 
+<!-- Modal Sobre -->
 <div class="modal fade" id="sobreModal" tabindex="-1" aria-labelledby="sobreModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -110,3 +115,4 @@
     </div>
   </div>
 </div>
+
