--- a/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/components/home/cabecalho/cabecalho.component.html
@@ -12,7 +12,7 @@
     </nav>
 
     <div class="d-flex justify-content-center align-items-center flex-grow-1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="logo mr-3">
       <div class="text-center">
         <h1 class="mb-0 text-white">Quest'pedia ✰</h1>
         <p class="mb-0 text-white">Explore seu jogo favorito</p>
@@ -39,7 +39,6 @@
   </div>
 </header>
 
-<!-- Modal Login -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -54,7 +53,6 @@
   </div>
 </div>
 
-<!-- Modal Logout -->
 <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -74,8 +72,7 @@
   </div>
 </div>
 
-<!-- Modal Favoritos -->
-<div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true" (hidden.bs.modal)="removerBackdrop()">
+<div class="modal fade" id="favoritosModal" tabindex="-1" aria-labelledby="favoritosModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -88,7 +85,6 @@
   </div>
 </div>
 
-<!-- Modal Mago -->
 <div class="modal fade" id="magoModal" tabindex="-1" aria-labelledby="magoModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -102,7 +98,6 @@
   </div>
 </div>
 
-<!-- Modal Sobre -->
 <div class="modal fade" id="sobreModal" tabindex="-1" aria-labelledby="sobreModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -115,4 +110,3 @@
     </div>
   </div>
 </div>
-
