--- a/projeto_2/src/app/components/subpage/corpo-jogo/corpo-jogo.component.css
+++ b/projeto_2/src/app/components/subpage/corpo-jogo/corpo-jogo.component.css
@@ -32,9 +32,11 @@
 
 .page-header h1 {
   margin-bottom: 20px;
-  color: #ff00ff;
+  color: #ffffff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   text-align: center;
+  font-style: italic;
+
 }
 
 .game-images {
